--- a/style.css
+++ b/style.css
@@ -140,3 +140,86 @@ body{
     margin-right: 20px;
     margin-left: 20px;
 }
+
+/* about us styles */
+.about-us-container{
+    width: 100%;
+    height: 80vh;
+}
+
+.about-us{
+    width: 100%;
+    height: 320px;
+    background-color: rgb(54, 54, 54);
+    margin-top: 140px;
+    position: relative;
+}
+
+.content-about{
+    padding: 10px 38px;
+}
+
+.heading-about{
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: rgb(36,193,255);
+    margin: 16px 0px;
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.heading-about::after{
+    content: '';
+    position: absolute;
+    left:0px;
+    bottom: -8px;
+    background-color: rgb(36,193,255);
+    width: 50px;
+    height: 2px;
+}
+
+.para-about{
+    font-size: 13px;
+    font-weight: 500;
+    color: rgba(255, 255, 255, 0.703);
+    line-height: 21px;
+    margin: 25px 0px;
+}
+
+.link-about{
+    position: relative;
+    text-decoration: none;
+    text-transform: uppercase;
+    border: 1px solid rgba(36,193,255,0.5);
+    display: inline-block;
+    font-size: 11px;
+    font-weight: 600;
+    padding: 8px 22px;
+    z-index:22;
+    color: white;
+}
+
+
+.span-about{
+    position: absolute;
+    top:0px;
+    left: 0px;
+    background-color: rgb(36,193,255);
+    width: 0%;
+    height: 100%;
+    z-index: -1;
+    transition: 0.4s ease-in;
+}
+
+.link-about:hover .span-about{
+    width: 100%;
+}
+
+.img-about{
+    height: 400px;
+    width: 50%;
+    position: absolute;
+    top:-46px;
+    right: 20px;
+}
