--- a/style.css
+++ b/style.css
@@ -280,10 +280,31 @@ body{
 .btn-product-ctg{
     color: rgb(36,193,255);
     text-decoration: none;
-    font-size: 15px;
+    font-size: 13px;
     text-transform: uppercase;
 }
 
 .btn-product-ctg:hover{
     color: rgba(36,193,255,0.5);
+}
+
+.button-left{
+    position: absolute;
+    left:10px;
+    border-radius: 50px;
+    padding: 5px;
+    background-color: rgb(36,193,255);
+}
+
+.button-right{
+    position: absolute;
+    right: 10px;
+    border-radius: 50px;
+    padding: 5px;
+    background-color: rgb(36,193,255);
+}
+
+.button-left:hover,.button-right:hover{
+    background-color: blue;
+    color: white;
 }
