--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    list-style: none;
     font-family: "DM Serif Text", serif;
     color: white;
 }
@@ -307,4 +308,114 @@ body{
 .button-left:hover,.button-right:hover{
     background-color: blue;
     color: white;
+}
+
+/* testimonal section */
+.testimonial{
+    width: 100%;
+    height: 100vh;
+    padding: 20px;
+    margin-top: 60px; 
+}
+
+.heading-testimonial{
+    text-align: center;
+    font-size: 42px;
+    font-weight: 700;
+    color: rgb(36,193,255);
+    margin-bottom:35px
+}
+
+.para-testimonial{
+    color: rgba(255, 255, 255, 0.703);
+    font-size: 15px;
+    letter-spacing: 1px;
+    text-align: center !important;
+    max-width:760px;
+    margin:12px auto;
+    line-height: 20px;
+}
+
+.container-clients{
+    margin: 100px 0px 20px 0px;
+}
+
+.container-content{
+    width: 80%;
+    height: 350px;
+    background-image: linear-gradient(145deg, rgba(36,193,255,0.5) 0%,rgba(36,193,255,1) 100%);
+    margin: auto;
+    padding: 30px;
+    text-align: end;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    transition: 0.2s ease-in;
+}
+
+.container-content:hover{
+    transform: translateY(-14px);
+}
+
+.img-client{
+    position: absolute;
+    top:-62px;
+    left:-62px;
+    width: 140px;
+    height: 140px;
+    border-radius: 50% !important;
+}
+
+.image-client{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.rating{
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+    margin: 12px 0px;
+}
+
+.rating, .stars{
+    font-size: 14px;
+    margin: 0px 2px;
+}
+
+.client-name{
+    font-size: 14px;
+    margin-top: 20px;
+    color: white;
+    text-align: center;
+}
+
+.para-client{
+    color: rgba(255, 255, 255, 0.703);
+    font-style: italic;
+    font-weight: 200;
+    font-size: 15px;
+    line-height: 24px;
+    margin: 26px 0px 15px 0px;
+    text-align: center;
+}
+
+.profession{
+    color: white;
+    text-align: center;
+    font-size: 14px;
+    margin-top: 38px;
+    font-weight: 300;
+}
+
+.carousel-indicators button{
+    background-color: rgb(36,193,255);
+}
+
+.carousel-indicators{
+    position: absolute;
+    bottom: -68px !important;
 }
