--- a/style.css
+++ b/style.css
@@ -528,3 +528,18 @@ body {
     color: rgba(255, 255, 255, 0.703);
     margin: 15px 0px;
 }
+
+/* footer style */
+footer{
+    background-color: rgb(4, 4, 4);
+    margin: 0px 0px !important;
+    height: 10vh;
+    margin-top:30px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.para-footer{
+    margin: 0px;
+}
